# GATEC

./: .gitignore  CONTRIBUTING.md  README.md  gatec.py  gatec_app.py  main.py  pyproject.toml
data/: data.json
gatec/core/: calculator.py  data_manager.py  db_manager.py
gatec/gui/: app.py  components.py  frames.py
