[project]
name = "gatec"
version = "0.1.0"
description = "An app to calculate the total efficiency of sample power plants"
authors = [
    {name = "Enrique Garcia-Tenorio Corcuera",email = "quiquegt1d@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
