[project]
name = "gatec"
version = "0.1.0"
description = "An app to calculate the total efficiency of sample power plants"
authors = [
    {name = "Enrique Garcia-Tenorio Corcuera",email = "quiquegt1d@gmail.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "build>=1.2.2.post1",
    "CacheControl>=0.14.2",
    "certifi>=2024.12.14",
    "charset-normalizer>=3.4.1",
    "cleo>=2.1.0",
    "click>=8.1.7",
    "colorama>=0.4.6",
    "contourpy>=1.3.1",
    "crashtest>=0.4.1",
    "cycler>=0.12.1",
    "distlib>=0.3.9",
    "dulwich>=0.22.7",
    "fastjsonschema>=2.21.1",
    "filelock>=3.16.1",
    "fonttools>=4.55.3",
    "idna>=3.10",
    "installer>=0.7.0",
    "keyring>=25.6.0",
    "kiwisolver>=1.4.8",
    "matplotlib>=3.10.0",
    "more-itertools>=10.6.0",
    "msgpack>=1.1.0",
    "numpy>=2.1.3",
    "packaging>=24.2",
    "pillow>=11.1.0",
    "pkginfo>=1.12.0",
    "platformdirs>=4.3.6",
    "poetry>=2.0.1",
    "poetry-core>=2.0.1",
    "pyparsing>=3.2.1",
    "pyproject_hooks>=1.2.0",
    "python-dateutil>=2.9.0.post0",
    "pywin32-ctypes>=0.2.3",
    "RapidFuzz>=3.11.0",
    "requests>=2.32.3",
    "requests-toolbelt>=1.0.0",
    "setuptools>=75.6.0",
    "shellingham>=1.5.4",
    "sip>=6.8.6",
    "six>=1.17.0",
    "sv-ttk>=2.6.0",
    "tomlkit>=0.13.2",
    "trove-classifiers>=2025.1.15.22",
    "urllib3>=2.3.0",
    "virtualenv>=20.29.1"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
gatec = "gatec.gui.app:run"
